--- a/views/partial/headerAdmin.hbs
+++ b/views/partial/headerAdmin.hbs
@@ -27,6 +27,10 @@
                             </li>  
 
                             <li>
+                                <a href="../admin/closureDate">Closure Date</a>
+                            </li>  
+
+                            <li>
                                 <a href="../">Logout</a>
                             </li>              
                         </ul>
