--- a/views/admin/closureDate.hbs
+++ b/views/admin/closureDate.hbs
@@ -50,7 +50,7 @@
                 <div class="line_only"></div>
             </div>
     
-    <div class="bottom_content">
+    <div class="bottom_content_closureDate">
                 <!-- Bottom Content -->
                 <table border="1" cellspacing ="0 " cellpadding="15">
                         <thead>
@@ -61,13 +61,13 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {{#each viewAllAccount}}
+                            {{#each viewAllClosureDate}}
                                 <tr>
-                                    <td>{{name}}</td>
-                                    <td>{{email}}</td>
+                                    <td>{{startDate}}</td>
+                                    <td>{{endDate}}</td>
                                     <td>
                                             <button>
-                                                <a href="../admin/closureDate?id={{_id}}">
+                                                <a href="../admin/updateClosureDate?id={{_id}}">
                                                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/Edit_icon_%28the_Noun_Project_30184%29.svg/1024px-Edit_icon_%28the_Noun_Project_30184%29.svg.png"
                                                     width="18" height="18" alt="">
                                                     Update
