--- a/views/admin/postIdeaManagement.hbs
+++ b/views/admin/postIdeaManagement.hbs
@@ -24,8 +24,8 @@
                             <tr>
                                     <th>Topic</th>
                                     <th>Description</th>
-                                    <th>Start Date</th>
-                                    <th>End Date</th>
+                                    {{!-- <th>Start Date</th>
+                                    <th>End Date</th> --}}
                                     <th>Categories</th>
                                     <th>User</th>
                                     <th>Email</th>
@@ -38,8 +38,8 @@
                                 <tr>
                                     <td>{{topic}}</td>
                                     <td>{{description}}</td>
-                                    <td>{{startDate}}</td>
-                                    <td>{{endDate}}</td>
+                                    {{!-- <td>{{startDate}}</td>
+                                    <td>{{endDate}}</td> --}}
                                     <td>{{category}}</td>
                                     <td>{{users}}</td>
                                     <td>{{email}}</td>
