--- a/public/css/admin_layout.css
+++ b/public/css/admin_layout.css
@@ -122,8 +122,6 @@ div.top_content_updateFunc table {
 /* =========== Post Idea Management Page =========== */
 div.ideaManagement {
     width: 100%;
-    height: 90%;
-    overflow-y: auto;
     padding-left: 1%;
     padding-right: 1%;
 }
@@ -131,6 +129,16 @@ div.ideaManagement {
 div.ideaManagement table{
     width: 100%;
 }
+
+div.show_closureDate {
+    width: 100%;
+    height: 13%;
+    padding-left: 1%;
+    padding-right: 1%;
+    overflow-y: auto;
+}
+
+
 
 div.table_title_idea {
     width: 100%;
