--- a/views/admin/postIdeaManagement.hbs
+++ b/views/admin/postIdeaManagement.hbs
@@ -67,11 +67,11 @@
                     </tbody>
                 </table>
             </div>
-            
+
             <div class="center_option_testPaging">
                 <div class="choosePage">
                                 {{#each viewNumPage as |val key|}}
-                                    <a href="../admin/choosePage?skipData={{key}}">
+                                    <a href="../admin/choosePageIdea?skipData={{key}}">
                                         <button>
                                                 {{val}}
                                         </button>
