--- a/views/admin/availableUsers.hbs
+++ b/views/admin/availableUsers.hbs
@@ -75,7 +75,7 @@
             <div class="center_option_testPaging">
                 <div class="choosePage">
                                 {{#each viewNumPage as |val key|}}
-                                    <a href="../admin/choosePage?skipData={{key}}">
+                                    <a href="../admin/choosePageUser?skipData={{key}}">
                                         <button>
                                                 {{val}}
                                         </button>
