--- a/views/staff/seeIdea.hbs
+++ b/views/staff/seeIdea.hbs
@@ -44,71 +44,87 @@
                     <span>File: {{file}}</span>
                     <br>
                     <span>End Date: {{endDate}}</span>
-                    <input type="hidden" id="postId" value="{{_id}}">
+                    <input type="hidden" name="postId" value="{{_id}}">
                 </div>
             </div>
                 <hr>
                 <div class="wrapper">
                     <div class="like">
-                        <button type="button" class="btn btn-default" onclick="like()">
+                        <button type="button" class="btn btn-default" onclick="like(this)">
                             <i class="fa-solid fa-thumbs-up"></i>
-                            <span id="likes">
+                            <span class="likes">
                                 {{likers.length}}
                             </span>
                         </button>
                     </div>
                     <div class="dislike">
-                        <button type="button" class="btn btn-default" onclick="dislike()">
+                        <button type="button" class="btn btn-default" onclick="dislike(this)">
                             <i class="fa-solid fa-thumbs-down"  ></i>
-                            <span id="dislikes">
+                            <span class="dislikes">
                                 {{dislikers.length}}
                             </span>
                         </button>
                     </div>
                 </div>
                 <script type="text/javascript">
-                    function like() {
+                    function like(btn) {
+                        btn.disabled = true;
+                        const dislikeBtn = btn.parentElement.parentElement.querySelector('div.dislike button');
+                        dislikeBtn.disabled = true;
                         var ajax = new XMLHttpRequest();
                         ajax.open("POST", "../staff/do-like", true);
                         ajax.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
 
                         ajax.onreadystatechange = function(){
-                            if (ajax.readyState == 4 && ajax.status == 200){
+                            if (ajax.readyState == 4)
+                            {
+                                btn.disabled = false;
+                                dislikeBtn.disabled = false;
                                 var response =JSON.parse(ajax.responseText);
-                                if (response.status == "success"){
-                                    //update likes
-                                    var likes = document.getElementById("likes").innerHTML;
-                                    likes = parseInt(likes);
-                                    likes ++;
-                                    document.getElementById("likes").innerHTML = likes;
-                                }else{
+                                if (ajax.status == 200 && response.status == "success") {
+                                    const like = btn.parentElement.parentElement.parentElement.querySelector(".likes");
+                                    const dislike = btn.parentElement.parentElement.parentElement.querySelector(".dislikes");
+                                    like.innerText = response.count.like ?? 0;
+                                    dislike.innerText = response.count.dislike ?? 0;
+
+                                } else {
                                     alert(response.message)
-                                }
+                                }                                    
+                                
                             }
                         };
-                        var postId = document.getElementById("postId").value;
+                        const input = btn.parentElement.parentElement.parentElement.querySelector("input[name='postId']");
+                        const postId = input.value;
                         ajax.send("postId="+ postId);
                     }
-                    function dislike() {
+                    function dislike(btn) {
+                        btn.disabled = true;
+                        const likeBtn = btn.parentElement.parentElement.querySelector('div.like button');
+                        likeBtn.disabled = true;
                         var ajax = new XMLHttpRequest();
                         ajax.open("POST", "../staff/do-dislike", true);
                         ajax.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
 
                         ajax.onreadystatechange = function(){
-                            if (ajax.readyState == 4 && ajax.status == 200){
+                            if (ajax.readyState == 4)
+                            {
+                                btn.disabled = false;
+                                likeBtn.disabled = false;
                                 var response =JSON.parse(ajax.responseText);
-                                if (response.status == "success"){
-                                    //update likes
-                                    var likes = document.getElementById("dislikes").innerHTML;
-                                    dislikes = parseInt(dislikes);
-                                    dislikes ++;
-                                    document.getElementById("dislikes").innerHTML = dislikes;
-                                }else{
+                                if (ajax.status == 200 && response.status == "success") {
+                                    const like = btn.parentElement.parentElement.parentElement.querySelector(".likes");
+                                    const dislike = btn.parentElement.parentElement.parentElement.querySelector(".dislikes");
+                                    like.innerText = response.count.like ?? 0;
+                                    dislike.innerText = response.count.dislike ?? 0;
+                                }
+                                else {
                                     alert(response.message)
                                 }
+                            
                             }
                         };
-                        var postId = document.getElementById("postId").value;
+                        const input = btn.parentElement.parentElement.parentElement.querySelector("input[name='postId']");
+                        const postId = input.value;
                         ajax.send("postId="+ postId);
                     }
                 </script>  
