--- a/views/staff/seeIdea.hbs
+++ b/views/staff/seeIdea.hbs
@@ -39,11 +39,11 @@
                 <div class="inside-content">
                     <span>Topic is {{topic}}</span>
                     <br>
-                    <span>Start Date: {{startDate}}</span>
+                    <span>Description: {{description}}</span>
                     <br>
                     <span>File: {{file}}</span>
                     <br>
-                    <span>End Date: {{endDate}}</span>
+                    <span>Category: {{category}}</span>
                     <input type="hidden" name="postId" value="{{_id}}">
                 </div>
             </div>
