--- a/public/css/admin_layout.css
+++ b/public/css/admin_layout.css
@@ -124,6 +124,7 @@ div.ideaManagement {
     width: 100%;
     padding-left: 1%;
     padding-right: 1%;
+    margin-bottom: 10px;
 }
 
 div.ideaManagement table{
@@ -160,6 +161,7 @@ div.searchBar input.searchBar{
     width: 30%;
 }
 
+/* ================= Paging  ================= */
 div.content_paging {
     width: 100%;
     padding: 10px;
@@ -170,15 +172,28 @@ div.content_paging table{
 }
 
 div.choosePage {
-    margin-left: 1%;
-    margin-top: 6px;
+    width: 65px;
+    float: left;
+    padding-right: 5px;
+    padding-left: 5px;
+}
 
+
+div.choosePage div.choosePage_inside{
+    max-height: 60px;
+    overflow-x: auto;
+    display:flex;
+
+}
+
+div.choosePage div.choosePage_inside::-webkit-scrollbar{
+    width: 0;
 }
 
 div.choosePage a{
     text-decoration: none;
     color: white;
-
+    margin-left: 5px;
 }
 
 div.choosePage a button{
@@ -186,13 +201,41 @@ div.choosePage a button{
     background-color: #203b5b;
     padding: 5px;
 
-
 }
 div.choosePage a button:hover{
     background-color: #fdbe01;
 
 }
 
+div.choosePageFirst {
+    float: left;
+    margin-left: 10px;
+}
+div.choosePageLast {
+    float: left;
+
+}
+div.choosePageFirst a button{
+    color: white;
+    background-color: #203b5b;
+    padding: 5px;
+
+}
+div.choosePageLast a button{
+    color: white;
+    background-color: #203b5b;
+    padding: 5px;
+
+}
+div.choosePageFirst a button:hover{
+    background-color: #fdbe01;
+
+}
+div.choosePageLast a button:hover{
+    background-color: #fdbe01;
+
+}
+/* ================= ( END ) Paging  ================= */
 
 div.bottom_content_closureDate {
     width: 100%;
