--- a/views/admin/availableUsers.hbs
+++ b/views/admin/availableUsers.hbs
@@ -73,23 +73,27 @@
             </div>
 
             <div class="center_option_testPaging">
-                <div class="choosePage">
+                <div class="choosePageFirst">
                     <a href="../admin/choosePageUser?skipData=0">
                         <button>
                             <<
                         </button>
                     </a>
-            
+                </div>
 
-                    {{#each viewNumPage as |val key|}}
-                        <a href="../admin/choosePageUser?skipData={{key}}">
-                            <button>
-                                    {{val}}
-                            </button>
-                        </a>
+                <div class="choosePage">
+                    <div class="choosePage_inside">
+                        {{#each viewNumPage as |val key|}}
+                            <a href="../admin/choosePageUser?skipData={{key}}">
+                                <button>
+                                        {{val}}
+                                </button>
+                            </a>
+                        {{/each}}
+                    </div>
+                </div>
 
-                    {{/each}}
-
+                <div class="choosePageLast">
                     <a href="../admin/choosePageUser?skipData={{lastPage}}">
                         <button>
                             >>
