--- a/views/coordinator/coordinatorHome.hbs
+++ b/views/coordinator/coordinatorHome.hbs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Staff Page</title>
+    <title>Coordinator Page</title>
     <link rel="stylesheet" href="/css/normal_layout.css" type="text/css">
 
 </head>
@@ -13,7 +13,7 @@
 <body>
 </body>
 <div class="container">
-    {{> headerStaff }}
+    {{> header }}
 
     <!-- Content -->
     <div class="main_Content">
