--- a/views/partial/headerAdmin.hbs
+++ b/views/partial/headerAdmin.hbs
@@ -17,6 +17,9 @@
                             <li>
                                 <a href="../admin/accountManagement">Account Management </a>
                             </li>    
+                            <li>
+                                <a href="../admin/accountManagementTEST">Account Management TEST</a>
+                            </li>   
 
                             <li>
                                 <a href="../admin/postIdeaManagement">Post Idea Management </a>
