view most Ideas

--- a/views/staff/seeIdea.hbs
+++ b/views/staff/seeIdea.hbs
@@ -44,6 +44,8 @@
                     <span>File: {{file}}</span>
                     <br>
                     <span>Category: {{category}}</span>
+                    <br>
+                    <span><a href="../staff/viewIdea?id={{_id}}">View more</a></span>
                     <input type="hidden" name="postId" value="{{_id}}">
                 </div>
             </div>
