--- a/views/partial/headerStaff.hbs
+++ b/views/partial/headerStaff.hbs
@@ -24,6 +24,9 @@
                                 <a href="../staff/allFileSubmit">Test</a>
                             </li>
                             <li>
+                                <a href="../staff/mostViewedIdeas">Most Viewed Ideas</a>
+                            </li>
+                            <li>
                                 <a href="../">Logout</a>
                             </li>              
                         </ul>
