--- a/views/staff/allFileSubmit.hbs
+++ b/views/staff/allFileSubmit.hbs
@@ -35,7 +35,7 @@
                                     var name = document.getElementById('myFile'); 
                                     var button = document.getElementById('downFile'); 
                                     button.innerHTML = name.files.item(0).name;                        
-                                    button.href =  "/GitHub/uploads/" + name.files.item(0).name;                                             
+                                    button.href =  "/COMP1640_GROUP2_COURSEWORK/uploads/" + name.files.item(0).name;                                             
                                 }              
                             </script>
                         </tr>
@@ -44,23 +44,22 @@
                             <td><input type="text" class="accountManagement" name="txtNewTopic"> </td> 
                         </tr>
                         <tr>
-                            <td class="accountManagement_title">File Name : </td>
+                            <td class="accountManagement_title">Description : </td>
                             <td><input type="text" class="accountManagement" name="txtNewDes"></td>
                         </tr>
                         <tr>                                            
-                            <td class="accountManagement_title">Start Date : </td>
-                            <td>
-                                <input type="date" name="txtStartDat"> 
-                            </td> 
-                            <td style="color: brown;">{{errorMessage}}</td>
+                            <td class="accountManagement_title">Email : </td>
+
                         </tr>
                         <tr>
-                            <td class="accountManagement_title">End Date : </td>
-                            <td>
-                                <input type="date" name="txtEndDate">
-                            </td>
-                            <td  style="color: brown;">{{errorMessage}}</td>
+                            <td class="accountManagement_title">Likers : </td>
+                            <td ><input type="text" class="accountManagement" name="arrLiker"></td>
                         </tr> 
+                                                <tr>
+                            <td class="accountManagement_title">DisLikers : </td>
+
+                            <td ><input type="text" class="accountManagement" name="arrDisLiker"></td>
+                        </tr>
                         <tr>
                             <td class="accountManagement_title">Category : </td>
                             <td>
