--- a/views/staff/seeIdea.hbs
+++ b/views/staff/seeIdea.hbs
@@ -45,7 +45,7 @@
                     <br>
                     <span>Category: {{category}}</span>
                     <br>
-                    <span><a href="../staff/viewIdea?id={{_id}}">View more</a></span>
+                    <span><a href="/staff/viewIdea?id={{_id}}">View more</a></span>
                     <br>
                     <input type="hidden" name="postId" value="{{_id}}">
                 </div>
