update view popular (Latest)

--- a/public/css/admin_layout.css
+++ b/public/css/admin_layout.css
@@ -262,3 +262,10 @@ div.top_content_updateDate table {
     width: 50%;
     height: 40%;
 }
+
+
+/* ================= View Most popular  ================= */
+
+
+
+/* ================= Paging  ================= */
