--- a/views/partial/headerAdmin.hbs
+++ b/views/partial/headerAdmin.hbs
@@ -17,9 +17,9 @@
                             <li>
                                 <a href="../admin/accountManagement">Account Management </a>
                             </li>    
-                            <li>
+                            {{!-- <li>
                                 <a href="../admin/accountManagementTEST">Account Management TEST</a>
-                            </li>   
+                            </li>    --}}
 
                             <li>
                                 <a href="../admin/postIdeaManagement">Post Idea Management </a>
@@ -31,6 +31,10 @@
 
                             <li>
                                 <a href="../admin/closureDate">Closure Date</a>
+                            </li>  
+
+                            <li>
+                                <a href="../admin/viewPopularIdeas">View Popular Ideas</a>
                             </li>  
 
                             <li>
