--- a/views/partial/headerStaff.hbs
+++ b/views/partial/headerStaff.hbs
@@ -18,7 +18,7 @@
                                 <a href="../staff/submit">Submit File</a>
                             </li>    
                             <li>
-                                <a href="../staff/viewAll">All File Submit</a>
+                                <a href="../staff/viewAll">View Submitted File</a>
                             </li>
                             <li>
                                 <a href="../staff/allFileSubmit">Test</a>
