--- a/views/admin/viewPopularIdeas.hbs
+++ b/views/admin/viewPopularIdeas.hbs
@@ -28,7 +28,7 @@
 
                                 <option value="LatestComments">Latest Comments</option>
 
-                                <option value="MostLikeAndDislike">Most Like & Dislike Ideas</option>
+                                <option value="MostLikeAndDislike">Most Popular Idea</option>
 
                                 <option value="MostViewed">Most Viewed Idea</option>
 
