--- a/views/partial/headerAdmin.hbs
+++ b/views/partial/headerAdmin.hbs
@@ -34,7 +34,7 @@
                             </li>  
 
                             <li>
-                                <a href="../admin/viewPopularIdeas">View Popular Ideas</a>
+                                <a href="../admin/viewPopularIdeas">View Ideas</a>
                             </li>  
 
                             <li>
