--- a/views/admin/postIdeaManagement.hbs
+++ b/views/admin/postIdeaManagement.hbs
@@ -35,7 +35,7 @@
                                     {{!-- <th>Start Date</th>
                                     <th>End Date</th> --}}
                                     <th>Categories</th>
-                                    <th>User</th>
+                                    {{!-- <th>User</th> --}}
                                     <th>Email</th>
 
                                     {{!-- <th></th> --}}
@@ -49,7 +49,7 @@
                                     {{!-- <td>{{startDate}}</td>
                                     <td>{{endDate}}</td> --}}
                                     <td>{{category}}</td>
-                                    <td>{{users}}</td>
+                                    {{!-- <td>{{users}}</td> --}}
                                     <td>{{email}}</td>
                                 
                                     {{!-- <td>
